kubernetes/apps/tiny/stirling-pdf-ingress-route-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  routes:
    - match: Host(`stirling-pdf.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: stirling-pdf
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-users
          namespace: traefik
